[package]
name = "game-data-export"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
thurgood = "0.2.1"
serde = {version = "1.0.218", features = ["derive"]}
serde_json = "1.0.139"
clap = { version = "4.5.31", features = ["derive"] }
csv = "1.3.1"
image = "0.25.5"
rayon = "1.10.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
rmp-serde = "1.3.0"
